@@ -4,7 +4,15 @@
 
  Changes between 1.0.0a and 1.0.1  [xx XXX xxxx]
 
-  *)
+  *) Initial TLSv1.1 support. Since TLSv1.1 is very similar to TLS v1.0 only
+     a few changes are required:
+
+       Add SSL_OP_NO_TLSv1_1 flag.
+       Add TLSv1_1 methods.
+       Update version checking logic to handle version 1.1.
+       Add explicit IV handling (ported from DTLS code).
+       Add command line options to s_client/s_server.
+     [Steve Henson]
 
  Changes between 1.0.0a and 1.0.0b  [xx XXX xxxx]
 
